--- a/pom.xml
+++ b/pom.xml
@@ -56,4 +56,22 @@
   
   </dependencies>
 
+         <build>
+    <plugins>
+        <!-- Maven Surefire Plugin configuration -->
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version> <!-- Use the latest version available -->
+            <configuration>
+                <!-- Specify the TestNG suite XML file -->
+                <suiteXmlFiles>
+                    <suiteXmlFile>src/test/resources/testing.xml</suiteXmlFile>
+                </suiteXmlFiles>
+            </configuration>
+        </plugin>
+    </plugins>
+</build>
+
+
 </project>
