--- a/pom.xml
+++ b/pom.xml
@@ -66,7 +66,7 @@
             <configuration>
                 <!-- Specify the TestNG suite XML file -->
                 <suiteXmlFiles>
-                    <suiteXmlFile>src/test/resources/testing.xml</suiteXmlFile>
+                    <suiteXmlFile>testng.xml</suiteXmlFile>
                 </suiteXmlFiles>
             </configuration>
         </plugin>
